--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -91,8 +91,66 @@
 
 			<div class="col-md-8">
 				<div class="book-list-hover">
-					<div class="book-list-active owl-carousel" id="topAuthors">
-						@*Javascript*@
+					<div class="book-list-active owl-carousel">
+						<div class="product-wrapper">
+							<div class="product-img-2">
+								<a href="#">
+									<img src="~/img/product/book/12.jpg" alt="">
+								</a>
+								<div class="product-action-2">
+									<a class="animate-left add-style-2" title="Add To Cart" href="#">Add to Cart <i class="ti-shopping-cart"></i></a>
+									<a class="animate-right wishlist-style-2" title="wishlist" href="#">
+										<i class="ti-heart"></i>
+									</a>
+								</div>
+							</div>
+							<div class="product-content-3 text-center">
+								<h4><a href="#">Be like Me  (magazine)</a></h4>
+								<div class="product-rating-2">
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+								</div>
+							</div>
+						</div>
+						<div class="product-wrapper">
+							<div class="product-img-2">
+								<a href="#">
+									<img src="~/img/product/book/13.jpg" alt="">
+								</a>
+								<div class="product-action-2">
+									<a class="animate-left add-style-2" title="Add To Cart" href="#">Add to Cart <i class="ti-shopping-cart"></i></a>
+									<a class="animate-right wishlist-style-2" title="wishlist" href="#">
+										<i class="ti-heart"></i>
+									</a>
+								</div>
+							</div>
+							<div class="product-content-3 text-center">
+								<h4><a href="#">Sky Fall  (Book)</a></h4>
+								<div class="product-rating-2">
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+									<i class="ti-star"></i>
+								</div>
+							</div>
+						</div>
+						<div class="product-wrapper">
+							<div class="product-img-2">
+								<a href="#">
+									<img src="~/img/product/book/12.jpg" alt="">
+								</a>
+								<div class="product-action-2">
+									<a class="animate-left add-style-2" title="Add To Cart" href="#">Add to Cart <i class="ti-shopping-cart"></i></a>
+									<a class="animate-right wishlist-style-2" title="wishlist" href="#">
+										<i class="ti-heart"></i>
+									</a>
+								</div>
+							</div>							
+						</div>
 					</div>
 				</div>
 			</div>
@@ -143,4 +201,4 @@
 	<script src="~/js/main.js"></script>
 	<script src="~/js/header.js"></script>
 	<script src="~/js/homepage.js"></script>
-}
+		}
