--- a/BookStore/Areas/Owner/Views/Dashboard/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Dashboard/Index.cshtml
@@ -16,7 +16,7 @@
 		</nav>
 	</div><!-- End Page Title -->
 
-	@* <section class="section dashboard">
+	 <section class="section dashboard">
 		<div class="row">
 
 			<!-- Left side columns -->
@@ -36,7 +36,6 @@
 									<div class="ps-3">
 										<h6>@Model.RevenueByDay</h6>
 										<span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-
 									</div>
 								</div>
 							</div>
@@ -70,7 +69,6 @@
 								<div class="card">
 									<div class="card-body">
 										<h5 class="card-title">Line Chart - Total revenue per day of the month</h5>
-
 										<!-- Line Chart -->
 										<div id="lineChart"></div>
 										<!-- End Line Chart -->
@@ -135,7 +133,7 @@
 			</div><!-- End Left side columns -->
 
 		</div><!-- End Right side columns -->
-	</section> *@
+	</section> 
 </main><!-- End #main -->
 @section Scripts{
 	<script src="~/js/js-admin/main.js"></script>
