--- a/BookStore/Areas/Owner/Views/Reviews/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Reviews/Index.cshtml
@@ -72,7 +72,7 @@
                         },
                         success: function (data) {
                             var a = document.createElement('a');
-                            var url = window.URL.createObjectURL(data);
+                            var url = window.URL.createObjectURL(data);``
                             a.href = url;
                             a.download = 'Reviews.xlsx';
                             document.body.appendChild(a);
