--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -51,9 +51,9 @@
 	<div class="header-bottom clearfix">
 		<div class="container">
 			<div class="header-bottom-wrapper">
-				<div class="logo-2 ptb-40">
+				<div class="logo-2 ptb-30">
 					<a asp-controller="Home" asp-action="Index">
-						<img src="~/img/logo/2.png" alt="">
+						<img src="~/img/logo/logo.png" style="max-width: 130px" alt="">
 					</a>
 				</div>
 				<div class="menu-style-2 book-menu menu-hover">
@@ -63,6 +63,7 @@
 							<li><a asp-controller="Home" asp-action="Shop">shop</a></li>
 							<li><a asp-controller="Home" asp-action="AboutUs">about us</a></li>
 							<li><a asp-controller="Home" asp-action="Contact">contact</a></li>
+							<li><a asp-controller="Home" asp-action="Help">help</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -178,6 +179,7 @@
 							<li><a asp-controller="Home" asp-action="Shop">shop</a></li>
 							<li><a asp-controller="Home" asp-action="AboutUs">about us</a></li>
 							<li><a asp-controller="Home" asp-action="Contact">contact</a></li>
+							<li><a asp-controller="Home" asp-action="Help">help me</a></li>
 						</ul>
 					</nav>
 				</div>
